tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7965/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "tuple",
            "fields": [
              {
                "kind": "integer",
                "sign": "unsigned",
                "width": 1
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "integer",
                "sign": "unsigned",
                "width": 1
              },
              {
                "kind": "string",
                "length": 2
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 0,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1bS3IbNxDFkDOUSIkhYzk5xww/Ir1zlaUk/v//3oxI8xxzKFdll5wh62yzzcJrb+wuo6nHZoOWS2yVUUNUqWYIPHS/fkAD4HCUuK/l+pe/xN+n/tpw64UxN/01v1wptmgrT3wclnyTLfK14tiIgGMzAo5pBByzCDi2IuC4FwHH/Qg4tiPg2ImA40EEHA8j4NiNgONPEXDsRcCxHwHHnyPgeC0CjkcRcLy+RY6J4Lgsv8A9NdLhnw7XdHilwyEdvuhwQ4cH2pxp86PNhRZvWhxp8aHkpuShyUmDT+LKL1JO+KHyq79p+88NaN/iAb9oC7/btD/Nx/O2Et8W+Q/bYHP79osx209t+Od73s4f1ap9J/w2BU72QcxtwNwOYO4A5k4AcxcwdwOYe4C5BxiM4z5g7gcwDwDzIODrIWAeBjCPAPMogHkMmMcBPk8A8ySAeQqYpwFfzwDzLIB5DpjnAcwLwLwI8HkJmJcBzCvAvAr4eg2Y1wHMG8C8CWDeAuZtgM87wLwTmC7cc+E5z3lpsS5O89EN27wv8q7QwUGc7Duz8V1oG15T1KH/jrNcY78++EN/zEfq0xD67Nnwydn+vpF9jretxIvzmePr+c8taMN9O2QL5w/H0lf6t65G18JY16Kmug6MdR3UVNehsa7D79WV+RzY8BnwntQBPnJPOjTUAv2xFliH/juCq9VacujWxwb14XHqMqY659MWbWm1Hge3ZdDG40vz7gPEh23IZ1Pe4Fxh3sZ5MzbOm1FN16NjY13HNdV1YqzrcU11nRrrOtntn8uy2z+hLfL9szTOm2lN16MzY11v1FTXmbGuZU11nRvrerbbP5dlt39CW+T758I4b2b1XI8K6+fi85rqav1c/H1NdbV+Lr7Y7Z/Lsts/oc16/+Rxlr99s8+/4f4f4b+h+Mcxk7+xWvzmy+8FkU2r92q08ZRjnVarvrENxzMFPT8IfWzePzjXx+g39/zIhecQz4e9yi1LU+iJGrFm+4gXbW1oS6tVPx3/OQU/aIt5ZAL/l//c89cW9OH+fcV/S/hf4a3UoUbSVlOpYzztc3/6e8pj1uIWYJPAFW1r+dkRtizWTyon1TqfW0qsXQV/2dhOjGM7rdb5nGyI7VSJjfeI32y4Di+qHfvvCK5W2rE/5HO6Qbvfq3WufaUN57Nsayp17EezdeLvKfdo7e54o8Z7z/Ls0XKr3OV6y/75vI3nADx74xnyorawvzx/XuV7KG6LumZu9bzy0V8p1n+FNpg3mdBS00/qnQhdZZsTNjS/cn41lXqZ35vGNhF+uE/mNn/vkLr95680Tv1klQvGuymvGa+9s4d8Gd9z4XHpKdxxfTXM1VzGkX4jjoZbn1OoQSbq/vdX0vpIaK2dxbEO17bQvJPvkSKO5vS+8Jlt8KmtI9p4af0ScS/nqBa3lj8hm6H8kWezi+Sh5JEF+sn8Yfwnf72K/GE+Wo7I/NHmx4+SPwnE/z35k/qOWv4kinZYJ/NHm1ta/uD5nfNHvouOfeh8wefAtFptv+nr80uUyfT8n5T4e1UG/rGk0I74njeAz1v4epl/xl9MymIxLBfluJzPR7PymrDvQM8DA/+z8fHZbDQu8/cFfRxctf9yMpzOBqPZ5Gw8LIfH34z/M/PUiDYVRAAA",
  "debug_symbols": "pZTbioMwEIbfJddeODEH9VVKKbZNFyGopLqwFN99Z9wZ214sLNmbfn9qvsmRPNQ1nJePUz/cxrtqDw91Tn2M/ccpjpdu7scB/32okn40IKBAAlMzK9VqomE2qq2QGvsbIva3ROzviNjfEw3TMh3TM2vV1sTmh1XJBKZmVkzDtEzH9EyuZ9BviJqJPpQUsADQigxWAFqKwRJAazFeQi2h4WBLCbQvtGCrJVQSjAQrwUnwEmoJDQdXStgqr2uh5FhOcwqBTuXlnPD0pi6FYVbtsMRYqM8uLlun+9QNG+cu4VdcaxiuSCx462OgtBZPu/xd1bQtm6zB7br9u68b8asqx3+Or83/xjeQNT7svs7yZfPx3uT45T5/a7N8s/s+w4fKsw9Z+/fqN1m+E9/lzd+K722WL/sHdc75wX7/oH6/P0dsdZc+vb28K1VKfXeOgZu3Zbi8fJ2/JvkiL/eUxku4LilQpefzjU/RAedcQFMeC0Vv+UE7V2gP1ARqeotNf1xpMt8=",
  "file_map": {
    "50": {
      "source": "global G_A: [[bool; 0]; 2] = [[], []];\n\nfn main(a: bool, b: [(u1, bool, u1, str<2>); 4]) -> pub [bool; 0] {\n    if (a) {\n        G_A[((((b[0].0 as u8) + (b[0].0 as u8)) as u32) % 2)]\n    } else {\n        G_A[((((b[0].0 as u8) + (b[0].0 as u8)) as u32) % 2)]\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
